src/ui/snapshots/pacecar__ui__panel__tests__cpu_gauge_panel.snap
---
source: src/ui/panel.rs
expression: panel_snapshot(&panel)
---
PanelSnapshot {
    label: "CPU",
    primary_value: "42%",
    secondary_value: Some(
        "3.8 GHz",
    ),
    tertiary_value: None,
    vis_branch: Gauge,
    color_rgb: (
        100,
        149,
        237,
    ),
}
