src/ui/snapshots/pacecar__ui__panel__tests__disk_text_panel.snap
---
source: src/ui/panel.rs
expression: panel_snapshot(&panel)
---
PanelSnapshot {
    label: "Disk I/O",
    primary_value: "54.3 MB/s",
    secondary_value: Some(
        "R: 42.9  W: 11.4",
    ),
    tertiary_value: None,
    vis_branch: TextOnly,
    color_rgb: (
        180,
        130,
        230,
    ),
}
