src/ui/snapshots/pacecar__ui__panel__tests__gpu_sparkline_panel.snap
---
source: src/ui/panel.rs
assertion_line: 246
expression: panel_snapshot(&panel)
---
PanelSnapshot {
    label: "GPU",
    primary_value: "28%",
    secondary_value: Some(
        "72°C",
    ),
    vis_branch: Sparkline,
    color_rgb: (
        230,
        80,
        80,
    ),
}
