src/ui/snapshots/pacecar__ui__panel__tests__network_text_panel.snap
---
source: src/ui/panel.rs
expression: panel_snapshot(&panel)
---
PanelSnapshot {
    label: "Network",
    primary_value: "12.5 MB/s",
    secondary_value: Some(
        "↑ 1.1  ↓ 11.4",
    ),
    tertiary_value: None,
    vis_branch: TextOnly,
    color_rgb: (
        255,
        165,
        0,
    ),
}
