src/ui/snapshots/pacecar__ui__panel__tests__ram_gauge_panel.snap
---
source: src/ui/panel.rs
expression: panel_snapshot(&panel)
---
PanelSnapshot {
    label: "RAM",
    primary_value: "50%",
    secondary_value: Some(
        "7.5/16 GB",
    ),
    tertiary_value: None,
    vis_branch: Gauge,
    color_rgb: (
        80,
        200,
        120,
    ),
}
